--- a/docs/documentation/environment.ipynb
+++ b/docs/documentation/environment.ipynb
@@ -152,12 +152,12 @@
    "metadata": {},
    "source": [
     "### `Environment.dynamic_viscosity()`\n",
-    "More details: https://uncscode.github.io/particula/utilities/dynamic_viscosity.html"
+    "More details: [`dynamic_viscosity`](./utilities/dynamic_viscosity.ipynb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "1.8371493734583912e-05 <Unit('kilogram / meter / second')>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
    "source": [
     "### `Environment.mean_free_path()`\n",
     "\n",
-    "More details: https://uncscode.github.io/particula/utilities/mean_free_path.html"
+    "More details: [`mean_free_path`](./utilities/mean_free_path.ipynb)"
    ]
   },
   {
