--- a/docs/documentation/particle.ipynb
+++ b/docs/documentation/particle.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Particle Classes\n",
+    "# The `Particle` Classes\n",
     "\n",
     "The `Particle` class is the base class for all particles, whether introduced discretely one by one or as a distribution. In reality, the `Particle` class is based on two intermediate classes: `ParticleDistribution` and `ParticleInstances` to instantiate particle distributions and particles directly, respectively."
    ]
@@ -28,7 +28,7 @@
     "\n",
     "## `ParticleDistribution` methods\n",
     "\n",
-    "#### `ParticleDistribution.pre_radius()`\n",
+    "### `ParticleDistribution.pre_radius()`\n",
     "\n",
     "The `pre_radius` method uses the attributes `cutoff`, `gsigma`, and `mode` to determine the starting and ending radii according to the utility `cutoff_radius.cut_rad`. Here, `cutoff` refers to the fraction cutoff of the distribution (e.g. `cutoff=0.9999` means taking only 99.99% of the lognormal distribution). Moreover, `gsigma` and `mode` are the lognormal parameters of the distribution, referring to the geometric standard deviation and mode (geometric mean) respectively. We use the `scipy.stats.lognorm` to construct the distribution in the `pre_discretize` method below.\n",
     "\n",
@@ -38,13 +38,13 @@
     "\n",
     "Finally, the `pre_radius` method returns a radius vector with units of meter.\n",
     "\n",
-    "#### `ParticleDistribution.pre_discretize()`\n",
+    "### `ParticleDistribution.pre_discretize()`\n",
     "\n",
     "The `pre_discretize` method uses the result of the pre_radius() method, the `disttype`, `gsigma`, and `mode` attributes to produce a probability density function distribution based on the `scipy.stats.lognorm` (lognormal) function. This is done via the `distribution_discretization.discretize` utility.\n",
     "\n",
     "More details: https://uncscode.github.io/particula/utilities/distribution_discretization.html\n",
     "\n",
-    "#### `ParticleDistribution.pre_distribution()`\n",
+    "### `ParticleDistribution.pre_distribution()`\n",
     "\n",
     "The `pre_distribution` method simply constructs the distribution multiplying the product of `pre_discretize()` by `nparticles` and dividing by `volume`."
    ]
@@ -70,31 +70,31 @@
     "\n",
     "## `ParticleInstances` methods\n",
     "\n",
-    "#### `ParticleInstances.particle_distribution()`\n",
+    "### `ParticleInstances.particle_distribution()`\n",
     "\n",
     "The `particle_distribution` method either returns the `ParticleDistribution.pre_distribution()` if the `particle_radius` attribute is not given explicitly, or it constructs the distribution dividing `particle_number` by `particle_radius` and dividing by `volume`.\n",
     "\n",
     "Note: the idea of distribution and density (hence, dividing by radius).\n",
     "\n",
-    "#### `ParticleInstances.particle_mass()`\n",
+    "### `ParticleInstances.particle_mass()`\n",
     "\n",
     "The `particle_mass` method returns the mass of the particle by using the `particle_radius`, `particle_density`, `shape_factor`, and `volume_void` attributes.\n",
     "\n",
     "More details:\n",
     "\n",
-    "#### `ParticleInstances.knudsen_number()`\n",
+    "### `ParticleInstances.knudsen_number()`\n",
     "\n",
     "The `knudsen_number` method returns the knudsen number of the particle by using the `particle_radius` attribute as well as the `mean_free_path()` method.\n",
     "\n",
     "More details: \n",
     "\n",
-    "#### `ParticleInstances.slip_correction_factor()`\n",
+    "### `ParticleInstances.slip_correction_factor()`\n",
     "\n",
     "The `slip_correction_factor` method returns the slip correction factor of the particle by using the `particle_radius` attribute as well as the `knudsen_number()` method.\n",
     "\n",
     "More details:\n",
     "\n",
-    "#### `ParticleInstances.friction_factor()`\n",
+    "### `ParticleInstances.friction_factor()`\n",
     "\n",
     "The `friction_factor` method returns the friction factor of the particle by using the `particle_radius` attribute as well as the `dynamic_viscosity()` and `slip_correction_factor()` methods.\n",
     "\n",
