--- a/docs/documentation/vapor.ipynb
+++ b/docs/documentation/vapor.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Vapor` class links the `Environment` class with the `Particle` class by defining condensing vapor that are precursors to particles. The `Vapor` class is defined in `paritcula/vapor.py`. It inherits everything from the `Environment` class, including attributes and methods. It can be imported as,"
+    "The `Vapor` class links the `Environment` class with the `Particle` class by defining condensing vapor that are precursors to particles. The `Vapor` class is defined in `particula/vapor.py`. It inherits everything from the `Environment` class, including attributes and methods. It can be imported as,"
    ]
   },
   {
