--- a/docs/documentation/utilities/distribution_discretization.ipynb
+++ b/docs/documentation/utilities/distribution_discretization.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# `distribution_discretization`\n",
+    "\n",
     "    \"\"\" discretize the distribution of the particles\n",
     "\n",
     "        Parameters:\n",
