--- a/docs/documentation/utilities/radius_cutoff.ipynb
+++ b/docs/documentation/utilities/radius_cutoff.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `Environment.mean_free_path()`\n",
+    "# `radius_cutoff`\n",
     "\n",
     "This routine determines the radius cutoff for the particle distribution\n",
     "\n",
