--- a/docs/documentation/utilities/mean_free_path.ipynb
+++ b/docs/documentation/utilities/mean_free_path.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `mean_free_path`\n",
+    "# `mean_free_path`\n",
     "\n",
     "The mean free path is the average distance of a molecule between collisions with other molecules present in the medium. We use the kinetic theory of gases to calculate the mean free path in an ideal gas as\n",
     "\n",
