--- a/docs/documentation/environment.ipynb
+++ b/docs/documentation/environment.ipynb
@@ -152,7 +152,8 @@
    "metadata": {},
    "source": [
     "### `Environment.dynamic_viscosity()`\n",
-    "More details: [`dynamic_viscosity`](./utilities/dynamic_viscosity.ipynb)"
+    "\n",
+    "- [`dynamic_viscosity`](./utilities/dynamic_viscosity.ipynb)"
    ]
   },
   {
@@ -188,7 +189,7 @@
    "source": [
     "### `Environment.mean_free_path()`\n",
     "\n",
-    "More details: [`mean_free_path`](./utilities/mean_free_path.ipynb)"
+    "- [`mean_free_path`](./utilities/mean_free_path.ipynb)"
    ]
   },
   {
