--- a/docs/documentation/particle.ipynb
+++ b/docs/documentation/particle.ipynb
@@ -13,6 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The `ParticleDistribution` inherits from the `Vapor` class, with the following added attributes and methods:\n",
+    "\n",
     "## `ParticleDistribution` attributes\n",
     "\n",
     "| attribute    | unit        | default value\n",
@@ -32,7 +34,7 @@
     "\n",
     "The `pre_radius` method uses the attributes `cutoff`, `gsigma`, and `mode` to determine the starting and ending radii according to the utility `cutoff_radius.cut_rad`. Here, `cutoff` refers to the fraction cutoff of the distribution (e.g. `cutoff=0.9999` means taking only 99.99% of the lognormal distribution). Moreover, `gsigma` and `mode` are the lognormal parameters of the distribution, referring to the geometric standard deviation and mode (geometric mean) respectively. We use the `scipy.stats.lognorm` to construct the distribution in the `pre_discretize` method below.\n",
     "\n",
-    "More details: https://uncscode.github.io/particula/utilities/cutoff_radius.html\n",
+    "- [`cutoff_radius`](./utilities/cutoff_radius.ipynb)\n",
     "\n",
     "Then, the `spacing` is used to create a vector of radii with `nbins` entries. The `spacing` attribute is a `string` type and for now, it can only be `\"linspace\"` or `\"logspace\"`: using the `numpy.linspace` or `numpy.logspace` functions, respectively, to construct the vector.\n",
     "\n",
@@ -40,9 +42,9 @@
     "\n",
     "### `ParticleDistribution.pre_discretize()`\n",
     "\n",
-    "The `pre_discretize` method uses the result of the pre_radius() method, the `disttype`, `gsigma`, and `mode` attributes to produce a probability density function distribution based on the `scipy.stats.lognorm` (lognormal) function. This is done via the `distribution_discretization.discretize` utility.\n",
+    "The `pre_discretize` method uses the result of the `pre_radius()` method above, `disttype`, `gsigma`, and `mode` attributes to produce a probability density function distribution based on the `scipy.stats.lognorm` (lognormal) function. This is done via the `distribution_discretization` utility.\n",
     "\n",
-    "More details: https://uncscode.github.io/particula/utilities/distribution_discretization.html\n",
+    "- [`distribution_discretization`](./utilities/distribution_discretization.ipynb)\n",
     "\n",
     "### `ParticleDistribution.pre_distribution()`\n",
     "\n",
@@ -64,7 +66,7 @@
     "| `volume_void`     |             | `0`\n",
     "| `particle_charge` |             | `0`\n",
     "\n",
-    "We note that the `particle_radius` attribute defaults to `ParticleDistribution.pre_radius()` if it is not given explicitly. Therefore, one could either provide a one or more radii via `particle_radius` or provide the parameters for a distribution as described above. The `particle_number` attribute defaults to `ParticleDistribution.nparticles` if the `particle_radius` attribute is not given explicitly; otherwise, it is set to `1` by default, but the user could provide a different value, for example, `particle_radius=[1e-9, 2e-9]` coupled with `particle_number=[1, 2]` would mean one particle of radius 1e-9 and 2 of radius 2e-9.\n",
+    "We note that the `particle_radius` attribute defaults to `ParticleDistribution.pre_radius()` if it is not given explicitly. Therefore, one could either provide a one or more radii via `particle_radius` or provide the parameters for a distribution as described above. The `particle_number` attribute defaults to `ParticleDistribution.nparticles` if the `particle_radius` attribute is not given explicitly; otherwise, it is set to `1` by default, but the user could provide a different value, for example, `particle_radius=[1e-9, 2e-9]` coupled with `particle_number=[1, 2]` would mean one particle of radius 1e-9 and two particles of radius 2e-9.\n",
     "\n",
     "In any event, the attributes here have higher precedence than the attributes in `ParticleDistribution`. Below, we reaffirm the `particle_distribution` as well.\n",
     "\n",
@@ -74,31 +76,31 @@
     "\n",
     "The `particle_distribution` method either returns the `ParticleDistribution.pre_distribution()` if the `particle_radius` attribute is not given explicitly, or it constructs the distribution dividing `particle_number` by `particle_radius` and dividing by `volume`.\n",
     "\n",
-    "Note: the idea of distribution and density (hence, dividing by radius).\n",
+    "Note: the idea of distribution density necessitates normalizing by the variable (in our case, it is the radius) and here we divide by radius to get the unit of 1 / m^3 / m (i.e. number concentration density). \n",
     "\n",
     "### `ParticleInstances.particle_mass()`\n",
     "\n",
     "The `particle_mass` method returns the mass of the particle by using the `particle_radius`, `particle_density`, `shape_factor`, and `volume_void` attributes.\n",
     "\n",
-    "More details:\n",
+    "- [`particle_mass`](./utilities/particle_mass.ipynb)\n",
     "\n",
     "### `ParticleInstances.knudsen_number()`\n",
     "\n",
     "The `knudsen_number` method returns the knudsen number of the particle by using the `particle_radius` attribute as well as the `mean_free_path()` method.\n",
     "\n",
-    "More details: \n",
+    "- [`knudsen_number`](./utilities/knudsen_number.ipynb)) \n",
     "\n",
     "### `ParticleInstances.slip_correction_factor()`\n",
     "\n",
-    "The `slip_correction_factor` method returns the slip correction factor of the particle by using the `particle_radius` attribute as well as the `knudsen_number()` method.\n",
+    "The `slip_correction_factor` method returns the slip correction factor of the particle by using the `particle_radius` attribute as well as the `knudsen_number()` method. \n",
     "\n",
-    "More details:\n",
+    "- [`slip_correction_factor`](./utilities/slip_correction_factor.ipynb)\n",
     "\n",
     "### `ParticleInstances.friction_factor()`\n",
     "\n",
     "The `friction_factor` method returns the friction factor of the particle by using the `particle_radius` attribute as well as the `dynamic_viscosity()` and `slip_correction_factor()` methods.\n",
     "\n",
-    "More details:"
+    "- [`friction_factor`](./utilities/friction_factor.ipynb)"
    ]
   },
   {
