--- a/docs/documentation/environment.ipynb
+++ b/docs/documentation/environment.ipynb
@@ -153,7 +153,7 @@
    "source": [
     "### `Environment.dynamic_viscosity()`\n",
     "\n",
-    "- [`dynamic_viscosity`](./utilities/dynamic_viscosity.ipynb)"
+    "- [`particula.util.dynamic_viscosity`](./utilities/dynamic_viscosity.ipynb)"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "source": [
     "### `Environment.mean_free_path()`\n",
     "\n",
-    "- [`mean_free_path`](./utilities/mean_free_path.ipynb)"
+    "- [`particula.util.mean_free_path`](./utilities/mean_free_path.ipynb)"
    ]
   },
   {
