--- a/docs/documentation/particle.ipynb
+++ b/docs/documentation/particle.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "The `pre_radius` method uses the attributes `cutoff`, `gsigma`, and `mode` to determine the starting and ending radii according to the utility `cutoff_radius.cut_rad`. Here, `cutoff` refers to the fraction cutoff of the distribution (e.g. `cutoff=0.9999` means taking only 99.99% of the lognormal distribution). Moreover, `gsigma` and `mode` are the lognormal parameters of the distribution, referring to the geometric standard deviation and mode (geometric mean) respectively. We use the `scipy.stats.lognorm` to construct the distribution in the `pre_discretize` method below.\n",
     "\n",
-    "- [`cutoff_radius`](./utilities/cutoff_radius.ipynb)\n",
+    "- [`particula.util.cutoff_radius`](./utilities/cutoff_radius.ipynb)\n",
     "\n",
     "Then, the `spacing` is used to create a vector of radii with `nbins` entries. The `spacing` attribute is a `string` type and for now, it can only be `\"linspace\"` or `\"logspace\"`: using the `numpy.linspace` or `numpy.logspace` functions, respectively, to construct the vector.\n",
     "\n",
@@ -44,7 +44,7 @@
     "\n",
     "The `pre_discretize` method uses the result of the `pre_radius()` method above, `disttype`, `gsigma`, and `mode` attributes to produce a probability density function distribution based on the `scipy.stats.lognorm` (lognormal) function. This is done via the `distribution_discretization` utility.\n",
     "\n",
-    "- [`distribution_discretization`](./utilities/distribution_discretization.ipynb)\n",
+    "- [`particula.util.distribution_discretization`](./utilities/distribution_discretization.ipynb)\n",
     "\n",
     "### `ParticleDistribution.pre_distribution()`\n",
     "\n",
@@ -82,25 +82,25 @@
     "\n",
     "The `particle_mass` method returns the mass of the particle by using the `particle_radius`, `particle_density`, `shape_factor`, and `volume_void` attributes.\n",
     "\n",
-    "- [`particle_mass`](./utilities/particle_mass.ipynb)\n",
+    "- [`particula.util.particle_mass`](./utilities/particle_mass.ipynb)\n",
     "\n",
     "### `ParticleInstances.knudsen_number()`\n",
     "\n",
     "The `knudsen_number` method returns the knudsen number of the particle by using the `particle_radius` attribute as well as the `mean_free_path()` method.\n",
     "\n",
-    "- [`knudsen_number`](./utilities/knudsen_number.ipynb)) \n",
+    "- [`knudsen_number`](./utilities/knudsen_number.ipynb)\n",
     "\n",
     "### `ParticleInstances.slip_correction_factor()`\n",
     "\n",
     "The `slip_correction_factor` method returns the slip correction factor of the particle by using the `particle_radius` attribute as well as the `knudsen_number()` method. \n",
     "\n",
-    "- [`slip_correction_factor`](./utilities/slip_correction_factor.ipynb)\n",
+    "- [`particula.util.slip_correction`](./utilities/slip_correction.ipynb)\n",
     "\n",
     "### `ParticleInstances.friction_factor()`\n",
     "\n",
     "The `friction_factor` method returns the friction factor of the particle by using the `particle_radius` attribute as well as the `dynamic_viscosity()` and `slip_correction_factor()` methods.\n",
     "\n",
-    "- [`friction_factor`](./utilities/friction_factor.ipynb)"
+    "- [`particula.util.friction_factor`](./utilities/friction_factor.ipynb)"
    ]
   },
   {
