--- a/docs/documentation/utilities/knudsen_number.ipynb
+++ b/docs/documentation/utilities/knudsen_number.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `knudsen_number`"
+    "# `knudsen_number`\n",
+    "\n",
+    "Returns particle's Knudsen number.\n",
+    "\n",
+    "        The Knudsen number reflects the relative length scales of\n",
+    "        the particle and the suspending fluid (air, water, etc.).\n",
+    "        This is calculated by the mean free path of the medium\n",
+    "        divided by the particle radius.\n",
+    "\n",
+    "        The Knudsen number is a measure of continuum effects and\n",
+    "        deviation thereof. For larger particles, the Knudsen number\n",
+    "        goes towards 0. For smaller particles, the Knudsen number\n",
+    "        goes towards infinity."
    ]
   },
   {
