--- a/docs/documentation/utilities/particle_mass.ipynb
+++ b/docs/documentation/utilities/particle_mass.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# `particle_mass`\n",
-    "TBD"
+    "\n",
+    "Returns particle's mass: 4/3 pi r^3 * density"
    ]
   },
   {
