print docs from help

--- a/docs/documentation/utilities/particle_mass.ipynb
+++ b/docs/documentation/utilities/particle_mass.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `particle_mass`\n",
-    "\n",
-    "Returns particle's mass: 4/3 pi r^3 * density"
+    "# `particle_mass`\n"
    ]
   },
   {
@@ -14,7 +12,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from particula.util import particle_mass\n",
+    "help(particle_mass)"
+   ]
   }
  ],
  "metadata": {
