print help in docs

--- a/docs/documentation/utilities/distribution_discretization.ipynb
+++ b/docs/documentation/utilities/distribution_discretization.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `distribution_discretization`\n",
-    "\n",
-    "    \"\"\" discretize the distribution of the particles\n",
-    "\n",
-    "        Parameters:\n",
-    "            interval     (float) the size interval of the distribution\n",
-    "            disttype     (str)   the type of distribution, \"lognormal\" for now\n",
-    "            gsigma       (float) geometric standard deviation of distribution\n",
-    "            mode         (float) pdf scale (corresponds to mode in lognormal)\n",
-    "    \"\"\"\n"
+    "# `distribution_discretization`\n"
    ]
   },
   {
@@ -21,7 +12,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from particula.util import distribution_discretization\n",
+    "help(distribution_discretization)"
+   ]
   }
  ],
  "metadata": {
