--- a/docs/documentation/utilities/dynamic_viscosity.ipynb
+++ b/docs/documentation/utilities/dynamic_viscosity.ipynb
@@ -41,6 +41,16 @@
     "from particula.environment import Environment\n",
     "Environment().dynamic_viscosity() # will produce approx 1.84e-5 kg/m/s"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from particula.util import dynamic_viscosity\n",
+    "help(dynamic_viscosity)"
+   ]
   }
  ],
  "metadata": {
