--- a/docs/documentation/utilities/mean_free_path.ipynb
+++ b/docs/documentation/utilities/mean_free_path.ipynb
@@ -32,6 +32,16 @@
     "from particula.environment import Environment\n",
     "print(\"mean free path is \", Environment().mean_free_path()) # will produce approx 66.5 nm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from particula.util import mean_free_path\n",
+    "help(mean_free_path)"
+   ]
   }
  ],
  "metadata": {
