--- a/docs/documentation/utilities/radius_cutoff.ipynb
+++ b/docs/documentation/utilities/radius_cutoff.ipynb
@@ -5,16 +5,7 @@
    "metadata": {},
    "source": [
     "# `radius_cutoff`\n",
-    "\n",
-    "This routine determines the radius cutoff for the particle distribution\n",
-    "\n",
-    "        Inputs:\n",
-    "            cutoff  (float) coverage cutoff (default: .9999)\n",
-    "            gsigma  (float) geometric standard deviation (default: 1.25)\n",
-    "            mode    (float) mean radius of the particles (default: 1e-7)\n",
-    "\n",
-    "        Returns:\n",
-    "            (starting radius, ending radius) float tuple\n"
+    "\n"
    ]
   },
   {
@@ -22,7 +13,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from particula.util import radius_cutoff\n",
+    "help(radius_cutoff)"
+   ]
   }
  ],
  "metadata": {
