--- a/docs/documentation/particle.ipynb
+++ b/docs/documentation/particle.ipynb
@@ -52,16 +52,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "resulting radius from 99.99% cutoff is  4.1972292396604054e-08 meter\n",
+      "resulting radius from 99% cutoff is  5.628288472608393e-08 meter\n"
+     ]
+    }
+   ],
+   "source": [
+    "from particula.particle import ParticleDistribution\n",
+    "PDcutoff1 = ParticleDistribution()\n",
+    "PDcutoff2 = ParticleDistribution(\n",
+    "    cutoff=.99,\n",
+    ")\n",
+    "\n",
+    "print(\"Starting radius from 99.99% cutoff is \", PDcutoff1.pre_radius().min())\n",
+    "print(\"Starting radius from 99% cutoff is \", PDcutoff2.pre_radius().min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First few radii from linspace spacing are  [4.1972292396604054e-08 4.216876899517281e-08 4.236524559374157e-08 4.256172219231033e-08 4.275819879087909e-08 4.295467538944785e-08] meter\n",
+      "First few radii from logspace spacing are  [4.1972292396604034e-08 4.204530615154216e-08 4.211844691904267e-08 4.2191714920053024e-08 4.2265110375904696e-08 4.2338633508314515e-08] meter\n"
+     ]
+    }
+   ],
+   "source": [
+    "from particula.particle import ParticleDistribution\n",
+    "PDspacing1 = ParticleDistribution()\n",
+    "PDspacing2 = ParticleDistribution(\n",
+    "    spacing=\"logspace\",\n",
+    ")\n",
+    "\n",
+    "print(\"First few radii from linspace spacing are \", PDspacing1.pre_radius()[:6])\n",
+    "print(\"First few radii from logspace spacing are \", PDspacing2.pre_radius()[:6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The units of the distribution (density units):  1 / meter ** 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The units of the distribution (density units): \", PDspacing1.pre_distribution().u)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The `ParticleInstances` inherits from the `ParticleDistribution` class, with the following added attributes and methods:\n",
+    "\n",
     "## `ParticleInstances` attributes\n",
     "\n",
     "| attribute         | unit        | default value\n",
     "| ---------         | ----        | -------------\n",
     "| `particle_radius` | m           | `None` or `ParticleDistribution.pre_radius()`\n",
     "| `particle_number` |             | `1` or `ParticleDistribution.nparticles`\n",
-    "| `particle_density`| kg / m^-3   | `1e3`\n",
+    "| `particle_density`| kg / m^3    | `1e3`\n",
     "| `shape_factor`    |             | `1`\n",
     "| `volume_void`     |             | `0`\n",
     "| `particle_charge` |             | `0`\n",
@@ -104,10 +173,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The units of the 'continuous' distribution (density units):  1 / meter ** 4\n",
+      "The units of the 'discrete' distribution (density units):  1 / meter ** 4\n",
+      "First few points of continuous:  [2200235960693703.8 2375247794883328.5] / meter ** 4\n",
+      "First few points of discrete:  [999999999999999.9 999999999999999.9] / meter ** 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "from particula.particle import ParticleInstances\n",
+    "PD_dist = ParticleInstances()\n",
+    "PD_disc = ParticleInstances(\n",
+    "    particle_radius=[1e-9, 2e-9],\n",
+    "    particle_number=[1, 2]\n",
+    ")\n",
+    "\n",
+    "print(\"The units of the 'continuous' distribution (density units): \", PD_dist.particle_distribution().u)\n",
+    "print(\"The units of the 'discrete' distribution (density units): \", PD_disc.particle_distribution().u)\n",
+    "print(\"First few points of continuous: \", PD_dist.particle_distribution()[:2])\n",
+    "print(\"First few points of discrete: \", PD_disc.particle_distribution()[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Particle mass:  [4.188790204786392e-24 3.3510321638291136e-23] kilogram\n",
+      "Friction factor:  [3.127639189424173e-15 1.2446393807134826e-14] kilogram / second\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Particle mass: \", PD_disc.particle_mass())\n",
+    "print(\"Friction factor: \", PD_disc.friction_factor())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The `Particle` Class\n",
+    "The `Particle` inherits from the `ParticleInstances` class, with the following added attributes and methods:\n",
+    "\n",
+    "\n",
+    "## The `Particle` attributes\n",
     "\n",
     "| attribute                   | unit               | default value\n",
     "| ---------                   | ----               | -------------\n",
@@ -116,17 +237,147 @@
     "| `boltzmann_constant`        | kg * m^2 / K / s^2 | `constants.BOLTZMANN_CONSTANT`\n",
     "| `coagulation_approximation` |                    | `\"hardsphere\"`\n",
     "\n",
+    "## The `Particle` methods\n",
     "\n",
-    "methods:\n",
-    "- _coag_prep\n",
-    "- reduced_mass\n",
-    "- reduced_friction_factor\n",
-    "- coulomb_potential_ratio\n",
-    "- coulomb_enhancement_kinetic_limit\n",
-    "- coulomb_enhancement_continuum_limit\n",
-    "- diffusive_knudsen_number\n",
-    "- dimensionless_coagulation\n",
-    "- coagulation"
+    "The following methods are available for the `Particle` class:\n",
+    "\n",
+    "- `Particle._coag_prep()`\n",
+    "- `Particle.reduced_mass()`\n",
+    "- `Particle.reduced_friction_factor()`\n",
+    "- `Particle.coulomb_potential_ratio()`\n",
+    "- `Particle.coulomb_enhancement_kinetic_limit()`\n",
+    "- `Particle.coulomb_enhancement_continuum_limit()`\n",
+    "- `Particle.diffusive_knudsen_number()`\n",
+    "- `Particle.dimensionless_coagulation()`\n",
+    "- `Particle.coagulation()`\n",
+    "\n",
+    "They all rely on one underlying utility: the class `DimensionlessCoagulation` from `dimensionless_coagulation`, which is documented in the [`particula.util.dimensionless_coagulation`](./utilities/dimensionless_coagulation.ipynb) notebook.\n",
+    "\n",
+    "All these added methods rely on previously defined attributes and methods to construct particle--particle interaction (e.g. coagulation). Thus, each method takes an input argument `particle` which is an instance of the `Particle` class. If not explicitly provided, the `particle` argument defaults to `self` (itself)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from particula.particle import Particle\n",
+    "\n",
+    "two_particles = Particle(\n",
+    "    particle_radius=[1e-9, 2e-9],\n",
+    "    particle_number=[1, 1]\n",
+    ")\n",
+    "\n",
+    "another_particle = Particle(particle_radius=1e-8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[[8.835482748391875e-16 1.4836836108384949e-15]<br> [1.4836836108384949e-15 1.235668665276733e-15]]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>meter<sup>3</sup>/second</td></tr></tbody></table>"
+      ],
+      "text/latex": [
+       "$\\begin{pmatrix}8.835482748391875\\times 10^{-16} & 1.4836836108384949\\times 10^{-15}\\\\ \n",
+       "1.4836836108384949\\times 10^{-15} & 1.235668665276733\\times 10^{-15}\\end{pmatrix}\\ \\frac{\\mathrm{meter}^{3}}{\\mathrm{second}}$"
+      ],
+      "text/plain": [
+       "array([[8.83548275e-16, 1.48368361e-15],\n",
+       "       [1.48368361e-15, 1.23566867e-15]]) <Unit('meter ** 3 / second')>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_particles.coagulation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[[2.3065250186958553e-15]]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>meter<sup>3</sup>/second</td></tr></tbody></table>"
+      ],
+      "text/latex": [
+       "$\\begin{pmatrix}2.3065250186958553\\times 10^{-15}\\end{pmatrix}\\ \\frac{\\mathrm{meter}^{3}}{\\mathrm{second}}$"
+      ],
+      "text/plain": [
+       "array([[2.30652502e-15]]) <Unit('meter ** 3 / second')>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "another_particle.coagulation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[[2.3065250186958553e-15]]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>meter<sup>3</sup>/second</td></tr></tbody></table>"
+      ],
+      "text/latex": [
+       "$\\begin{pmatrix}2.3065250186958553\\times 10^{-15}\\end{pmatrix}\\ \\frac{\\mathrm{meter}^{3}}{\\mathrm{second}}$"
+      ],
+      "text/plain": [
+       "array([[2.30652502e-15]]) <Unit('meter ** 3 / second')>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "another_particle.coagulation(another_particle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[[1.8143554043998508e-14]<br> [7.479664416578196e-15]]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>meter<sup>3</sup>/second</td></tr></tbody></table>"
+      ],
+      "text/latex": [
+       "$\\begin{pmatrix}1.8143554043998508\\times 10^{-14}\\\\ \n",
+       "7.479664416578196\\times 10^{-15}\\end{pmatrix}\\ \\frac{\\mathrm{meter}^{3}}{\\mathrm{second}}$"
+      ],
+      "text/plain": [
+       "array([[1.81435540e-14],\n",
+       "       [7.47966442e-15]]) <Unit('meter ** 3 / second')>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_particles.coagulation(another_particle)"
    ]
   }
  ],
