--- a/_sources/examples/coagulation_demo.ipynb
+++ b/_sources/examples/coagulation_demo.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparing different coagulation calculations.\n",
+    "\n",
+    "The problem here: positive particles (1 to 9 charges) of radius 3 nm colliding with a negative ion of radius 0.9 nm.\n",
+    "\n",
+    "Several coagulation approximations:\n",
+    "- hard shpere\n",
+    "- gh2012: https://journals.aps.org/pre/abstract/10.1103/PhysRevE.85.026410\n",
+    "- gk2008: https://journals.aps.org/pre/abstract/10.1103/PhysRevE.78.046402\n",
+    "- dy2007: https://aip.scitation.org/doi/10.1063/1.2713719\n",
+    "- cg2019: https://www.tandfonline.com/doi/suppl/10.1080/02786826.2019.1614522\n",
+    "- lf2013: https://www.tandfonline.com/doi/full/10.1080/02786826.2013.783684"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
