--- a/docs/examples/distribution_demo.ipynb
+++ b/docs/examples/distribution_demo.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Making a particle distribution.\n",
         "\n",
-        "We are going to look at two classes in particula, for this notebook. The first is `particle_distribution` and the second (`dynamic_step`) we'll use to move forward in time. \n",
+        "We are going to look at two classes in particula, for this notebook. The first is `particle` and the second (`dynamics`) we'll use to move forward in time. \n",
         "\n",
         "So lets get those imported along with numpy and plotting.\n"
       ]
@@ -22,7 +22,7 @@
       "outputs": [],
       "source": [
         "# from particula import u\n",
-        "from particula import particle, dynamic_step\n",
+        "from particula import particle, dynamics\n",
         "import numpy as np\n",
         "import matplotlib"
       ]
@@ -81,7 +81,7 @@
         "default_distribution = particle.ParticleDistribution()\n",
         "\n",
         "print(\"Radii\")\n",
-        "default_distribution.pre_radius()[0:10]"
+        "default_distribution.pre_radius()[:10]"
       ]
     },
     {
@@ -133,7 +133,7 @@
       ],
       "source": [
         "print(\"Particles PFD given radii.\")\n",
-        "default_distribution.pre_distribution()[0:10]"
+        "default_distribution.pre_distribution()[:10]"
       ]
     },
     {
@@ -439,8 +439,8 @@
       },
       "outputs": [],
       "source": [
-        "coarse_coag_loss = dynamic_step.DynamicStep(**coarse_mode).coag_loss()\n",
-        "coarse_coag_gain = dynamic_step.DynamicStep(**coarse_mode).coag_gain()"
+        "coarse_coag_loss = dynamics.Rates(**coarse_mode).coagulation_loss()\n",
+        "coarse_coag_gain = dynamics.Rates(**coarse_mode).coagulation_gain()"
       ]
     },
     {
