--- a/_sources/examples/distribution_demo.ipynb
+++ b/_sources/examples/distribution_demo.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Making a particle distribution.\n",
         "\n",
-        "We are going to look at two classes in particula, for this notebook. The first is `particle_distribution` and the second (`dynamic_step`) we'll use to move forward in time. \n",
+        "We are going to look at two classes in particula, for this notebook. The first is `particle` and the second (`rates`) we'll use to move forward in time. \n",
         "\n",
         "So lets get those imported along with numpy and plotting.\n"
       ]
@@ -22,7 +22,7 @@
       "outputs": [],
       "source": [
         "# from particula import u\n",
-        "from particula import particle, dynamic_step\n",
+        "from particula import particle, rates\n",
         "import numpy as np\n",
         "import matplotlib"
       ]
@@ -81,7 +81,7 @@
         "default_distribution = particle.ParticleDistribution()\n",
         "\n",
         "print(\"Radii\")\n",
-        "default_distribution.pre_radius()[0:10]"
+        "default_distribution.pre_radius()[:10]"
       ]
     },
     {
@@ -133,7 +133,7 @@
       ],
       "source": [
         "print(\"Particles PFD given radii.\")\n",
-        "default_distribution.pre_distribution()[0:10]"
+        "default_distribution.pre_distribution()[:10]"
       ]
     },
     {
@@ -439,8 +439,8 @@
       },
       "outputs": [],
       "source": [
-        "coarse_coag_loss = dynamic_step.DynamicStep(**coarse_mode).coag_loss()\n",
-        "coarse_coag_gain = dynamic_step.DynamicStep(**coarse_mode).coag_gain()"
+        "coarse_coag_loss = rates.Rates(**coarse_mode).coagulation_loss()\n",
+        "coarse_coag_gain = rates.Rates(**coarse_mode).coagulation_gain()"
       ]
     },
     {
@@ -952,7 +952,8 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.4 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -965,7 +966,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.10.4"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
+      }
     }
   },
   "nbformat": 4,
