--- a/docs/examples/distribution_demo.ipynb
+++ b/docs/examples/distribution_demo.ipynb
@@ -389,7 +389,7 @@
         }
       ],
       "source": [
-        "fig, ax= matplotlib.pyplot.subplots(1,2,figsize=[14,6])\n",
+        "fig, ax= plt.subplots(1,2,figsize=[14,6])\n",
         "\n",
         "ax[0].plot(fine_mode_dist.pre_radius().m, fine_mode_dist.pre_distribution().m)\n",
         "ax[0].plot(coarse_mode_dist.pre_radius().m, coarse_mode_dist.pre_distribution().m)\n",
